--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -17,6 +17,8 @@
 	<div class="post-head">
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
 		<h5>{{excerpt}}</h5>
+		{{!--{{#has tag="lynx-roundup"}}Lynx Roundup {{#get "tags" filter="tag:link-roundup" include="count.posts"}}X of {{count.posts}}{{/has}}--}}
+
 		{{!--<div class="post-meta">
 			<span class="author"><i class="far fa-user"></i> {{authors separator=", "}}</span>
 			<span class="date"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span><!-- &bull;
