--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -612,6 +612,7 @@ pre {
 }
 .page-about .about-author .bio {
   float: left !important;
+  font-size: 14px;
 }
 .page-about .about-author i {
   color: #959595 !important;
@@ -619,9 +620,21 @@ pre {
 .page-about .about-author span {
   color: #959595;
 }
+@media (max-width: 1040px) {
+  .page-about .about-author {
+    width: 100% !important;
+  }
+  .page-about .about-author .meta-info {
+    display: flex;
+    justify-content: space-between;
+  }
+  .page-about .about-author .bio {
+    float: none !important;
+  }
+}
 .about-author {
   background: #FFFFFF;
-  padding: 25px;
+  padding: 20px;
   margin-bottom: 25px;
   border-radius: 5px;
 }
